[gd_scene load_steps=4 format=3 uid="uid://dg0x01olbffd"]

[ext_resource type="Script" path="res://Scripts/skills.gd" id="1_tqliu"]
[ext_resource type="Texture2D" uid="uid://dvguncwwgkxo" path="res://Assets/LifeBarMiniUnder.png" id="2_ue26i"]
[ext_resource type="Texture2D" uid="uid://bxw5pafchama2" path="res://Assets/LifeBarMiniProgress.png" id="3_18pxk"]

[node name="HUB" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Skills" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -112.0
offset_right = 175.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
script = ExtResource("1_tqliu")

[node name="skillpoints" type="Label" parent="Skills"]
layout_mode = 2
text = "Skill points:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Skills"]
layout_mode = 2
size_flags_vertical = 3

[node name="StrengthL" type="Label" parent="Skills/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
text = "Strength: "

[node name="Strength" type="TextureProgressBar" parent="Skills/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
nine_patch_stretch = true
texture_under = ExtResource("2_ue26i")
texture_progress = ExtResource("3_18pxk")

[node name="StrengthB" type="Button" parent="Skills/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "+"

[node name="HBoxContainer2" type="HBoxContainer" parent="Skills"]
layout_mode = 2
size_flags_vertical = 3

[node name="Speedl" type="Label" parent="Skills/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
text = "Speed: "

[node name="Speed" type="TextureProgressBar" parent="Skills/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
nine_patch_stretch = true
texture_under = ExtResource("2_ue26i")
texture_progress = ExtResource("3_18pxk")

[node name="SpeedB" type="Button" parent="Skills/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "+"

[node name="HBoxContainer3" type="HBoxContainer" parent="Skills"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Skills/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.8
text = "Potion: "
vertical_alignment = 1

[node name="Potions" type="TextureProgressBar" parent="Skills/HBoxContainer3"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
nine_patch_stretch = true
texture_under = ExtResource("2_ue26i")
texture_progress = ExtResource("3_18pxk")

[node name="PotionsB" type="Button" parent="Skills/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "+"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -245.0
offset_top = -299.0
grow_horizontal = 0
grow_vertical = 0

[connection signal="pressed" from="Skills/HBoxContainer/StrengthB" to="Skills" method="_on_strength_b_pressed"]
[connection signal="pressed" from="Skills/HBoxContainer2/SpeedB" to="Skills" method="_on_speed_b_pressed"]
[connection signal="pressed" from="Skills/HBoxContainer3/PotionsB" to="Skills" method="_on_potions_b_pressed"]
